# __ngr__

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  __io_uring__.txt  __settings__.json  a.out
doc/: io_uring_echo.hpp.in  plan __ngr::__core::__memrc.txt
include/: __exec_io_uring_context.hpp.in  __exec_static_thread_pool.hpp.in  __exec_timed_thread_scheduler.hpp.in  __libcxx_memory_resource.cpp.in  __libstdc++_v3_network_ts_stdx_bits_net.hpp.in  __libstdc++_v3_network_ts_stdx_internet.hpp.in
include/__ngr/__core/: __aligned_storage.hpp  __allocator.hpp  __atomic_intrusive_queue.hpp  __atomic_segment_array.hpp  __awaitable.hpp  __base_offset.hpp  __buffer.hpp  __circular_buffer.hpp  __coro_destroy.hpp  __coro_resume.hpp  __exit.hpp  __file_descriptor.hpp  __frame.hpp  __generic_coro_task.hpp  __generic_op_base.hpp  __generic_task.hpp  __generic_task_base.hpp  __intrusive_heap.hpp  __intrusive_list.hpp  __intrusive_mpsc_queue.hpp  __intrusive_queue.hpp  __intrusive_rcu_list.hpp  __io_uring_context.hpp.bak  __io_uring_ops.hpp.bak  __memory_mapped_region.hpp  __memory_resource.hpp  __nttp.hpp  __once_flag.hpp  __protocal.hpp  __round_up.hpp  __scheduler.hpp  __spawn.hpp  __spin_loop_pause.hpp  __stack_frame_alloc.hpp  __stop_inplace.hpp  __task.hpp  __task_facade.hpp  __throw_error_code_if.hpp  __xorshift.hpp
include/__ngr/__protocal/: __memory_resource.hpp  __message.hpp
source/: main.cxx  main.cxx.bak
test/: __async_accept_receive.cxx
test/__core/: __memory_resource.cxx
